resources/ruby/ruby_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ruby-app
  name: ruby-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ruby-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ruby-app
    spec:
      containers:
      - image: quay.io/paulo_luizetto/ruby-hello-world-image/herp:v1.0
        imagePullPolicy: Always
        name: ruby-app
        resources:
          limits:
            cpu: 50m
            memory: 150Mi
          requests:
            cpu: 20m
            memory: 75Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
