resources/ruby/static-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ruby-app
  name: ruby-app
spec:
  host: production-route.example.com
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    name: ruby-app
